makefile alpha version

--- a/test/Daniel/Makefile
+++ b/test/Daniel/Makefile
@@ -1,14 +1,13 @@
-STREAMCHIPER  	= streamChiper.o
-UTILITY		= utility.o
 TESTER 		= test.o
 CC 		= gcc
 CFLAGS 		= -Wall -w
+OBJECT  = $(wildcard StreamChiper/*.o)
+OB	= StreamChiper/streamChiper.o StreamChiper/all5.o StreamChiper/maj5.o StreamChiper/utility.o StreamChiper/a51.o StreamChiper/lfsr.o
 
-all: $(STREAMCHIPER) $(UTILITY) $(TESTER) 
-	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(TESTER) $(UTILITY)
+all: $(OB)  $(TESTER) 
+	cd StreamChiper; make
+	$(CC) $(CFLAGS) -o test $(OB) $(TESTER)
 
 clean:
-	rm -f *.o test
+	rm -f *.o test $(OBJECT)
 	
-clean_o:	
-	rm -f *.o
