utility + block functions

--- a/test/Daniel/Makefile
+++ b/test/Daniel/Makefile
@@ -1,13 +1,11 @@
 TESTER 		= test.o
 CC 		= gcc
 CFLAGS 		= -Wall -w
-OBJECT  = $(wildcard StreamChiper/*.o)
-OB	= StreamChiper/streamChiper.o StreamChiper/all5.o StreamChiper/maj5.o StreamChiper/utility.o StreamChiper/a51.o StreamChiper/lfsr.o
+STREAMCHIPER	= $(patsubst %.c, %.o, $(wildcard StreamChiper/*.c))
 
-all: $(OB)  $(TESTER) 
-	cd StreamChiper; make
-	$(CC) $(CFLAGS) -o test $(OB) $(TESTER)
+all: $(STREAMCHIPER)  $(TESTER) 
+	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(TESTER)
 
 clean:
-	rm -f *.o test $(OBJECT)
+	rm -f *.o test $(STREAMCHIPER)
 	
