--- a/test/Daniel/Makefile
+++ b/test/Daniel/Makefile
@@ -2,10 +2,12 @@ TESTER 		= test.o
 CC 		= gcc
 CFLAGS 		= -Wall -w
 STREAMCHIPER	= $(patsubst %.c, %.o, $(wildcard StreamChiper/*.c))
+UTILITY		= $(patsubst %.c, %.o, $(wildcard Utility/*.c))
+BLOCKCHIPER	= $(patsubst %.c, %.o, $(wildcard BlockChiper/*.c))
 
-all: $(STREAMCHIPER)  $(TESTER) 
-	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(TESTER)
+all: $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(TESTER) 
+	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(TESTER)
 
 clean:
-	rm -f *.o test $(STREAMCHIPER)
+	rm -f *.o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER)
 	
