--- a/test/Daniel/Makefile
+++ b/test/Daniel/Makefile
@@ -4,9 +4,10 @@ CFLAGS 		= -Wall -w
 STREAMCHIPER	= $(patsubst %.c, %.o, $(wildcard StreamChiper/*.c))
 UTILITY		= $(patsubst %.c, %.o, $(wildcard Utility/*.c))
 BLOCKCHIPER	= $(patsubst %.c, %.o, $(wildcard BlockChiper/*.c))
+PRNG		= $(patsubst %.c, %.o, $(wildcard PRNG/*.c))
 
-all: $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(TESTER) 
-	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(TESTER)
+all: $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(TESTER) 
+	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(TESTER)
 
 clean:
 	rm -f *.o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER)
