--- a/test/Daniel/Makefile
+++ b/test/Daniel/Makefile
@@ -1,4 +1,4 @@
-TESTER 		= test.o
+RSAGEN 		= RSAkeygen.o
 CC 		= gcc
 CFLAGS 		= -Wall -w
 STREAMCHIPER	= $(patsubst %.c, %.o, $(wildcard StreamChiper/*.c))
@@ -8,7 +8,7 @@ PRNG		= $(patsubst %.c, %.o, $(wildcard PRNG/*.c))
 SERVER_OBJS=server.o
 CLIENT_OBJS=client.o
 
-all: server client 
+all: server client rsakeygen 
 
 client: $(CLIENT_OBJS) $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG)
 	$(CC) $(CFLAGS) $(CLIENT_OBJS) -o $@ $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) -lcrypto
@@ -16,9 +16,9 @@ client: $(CLIENT_OBJS) $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG)
 server: $(SERVER_OBJS) $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG)
 	$(CC) $(CFLAGS) $(SERVER_OBJS) -o $@ $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) -lcrypto
 	
-ss: $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(TESTER) server client
-	$(CC) $(CFLAGS) -o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(TESTER) -lcrypto
+rsakeygen: $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(RSAGEN) 
+	$(CC) $(CFLAGS) -o rsagen $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(RSAGEN) -lcrypto
 	
 clean:
-	rm -f *.o test $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(SERVER_OBJS) $(CLIENT_OBJS) server client
+	rm -f *.o rsagen $(RSAGEN) $(STREAMCHIPER) $(UTILITY) $(BLOCKCHIPER) $(PRNG) $(SERVER_OBJS) $(CLIENT_OBJS) server client
 	
